added comment in hw1.ipynb

--- a/middle_python/hw1/hw1.ipynb
+++ b/middle_python/hw1/hw1.ipynb
@@ -916,6 +916,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Убираем дубли в таблице telecom_companiesokved\n",
     "with sqlite3.connect('hw1.db') as connection:\n",
     "    stmt = \\\n",
     "    \"\"\"\n",
