added settings to hw2 and module main.py

--- a/middle_python/hw2/hw2.ipynb
+++ b/middle_python/hw2/hw2.ipynb
@@ -95,7 +95,7 @@
     "# from typing import List\n",
     "# import requests\n",
     "from time import sleep\n",
-    "import sqlite3\n",
+    "# import sqlite3\n",
     "# from pathlib import Path\n",
     "import json5\n",
     "from utils import (areas_parser, get_query, execute, get_data_by_api, get_table,\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "aafb045b-fa70-4c5e-9076-424551edcaa6",
    "metadata": {},
    "outputs": [
@@ -126,6 +126,7 @@
     "country = settings['country']\n",
     "regions = settings['regions']\n",
     "url_params = settings['url_params']\n",
+    "num_vac = settings['num_vac']\n",
     "\n",
     "areas_dct = areas_parser(url_areas, country, regions)  # получаем id заданных регионов\n",
     "print(f'id регионов: {areas_dct}')\n",
@@ -492,23 +493,17 @@
     "        _vacancies = data.get('items', [])\n",
     "        found, page, pages = data.get('found', 0), data.get('page', 0), data.get('pages', 1)\n",
     "        params.update(found=found, page=page + 1, pages=pages)\n",
-    "        print(f'\\tfound: {found}, pages: {pages}, page: {page} in get_vac')\n",
+    "        print(f'\\tНайдено: {found}, страниц: {pages}, страница: {page}')\n",
     "        vacancies += _vacancies\n",
-    "\n",
-    "        print('\\tpage after in get_vac', params.get('page'), page)\n",
     "\n",
     "        # Количество вакансий\n",
     "        print('Количество спарсенных со стр', page,\n",
     "              'вакансий по заданным параметрам:', len(_vacancies),\n",
     "              'всего спарсено вакансий:', len(vacancies), end='\\n\\n')\n",
     "\n",
-    "        if len(vacancies) < (found if found < 100 else 100) and page < pages:\n",
+    "        if len(vacancies) < (found if found < num_vac else num_vac) and page < pages:\n",
     "            sleep(3)\n",
     "            get_vacancies(url, params, vacancies)\n",
-    "            page += 1\n",
-    "            print('\\tpage after recursion in get_vac', params.get('page'), page)\n",
-    "\n",
-    "    print('\\tpage final in get_vac', params.get('page'))\n",
     "    return vacancies\n",
     "\n",
     "\n",
@@ -550,9 +545,9 @@
     "        ]\n",
     "    ]\n",
     "\n",
-    "#     vacancies_df = pd.concat([vacancies_df,\n",
-    "#                               employers_df.add_prefix('company_')],\n",
-    "#                              axis=1)\n",
+    "    # vacancies_df = pd.concat([vacancies_df,\n",
+    "    #                          employers_df.add_prefix('company_')],\n",
+    "    #                         axis=1)\n",
     "    # Убираем дубли\n",
     "    employers_df = employers_df[~employers_df.duplicated()]\n",
     "    # Запись DF в таблицу БД employers\n",
@@ -586,15 +581,13 @@
     "\n",
     "def vacancies_processing(df: pd.DataFrame = pd.DataFrame()):\n",
     "    \"\"\"Обработка списка вакансий и преобразование в таблицы\"\"\"\n",
-    "    print('page before in proc', url_params.get('page'))\n",
+    "    print('Парсинг страницы', url_params.get('page'))\n",
     "    fill_vac = [{}] * len(df)\n",
     "    vacancies = get_vacancies(url_vac, url_params, fill_vac)\n",
     "    found, page, pages = (url_params.get('found', 0),\n",
     "                          url_params.get('page', 0),\n",
     "                          url_params.get('pages', 0))\n",
-    "    print('page after in proc', page)\n",
-    "    print('num vac =', len(vacancies))\n",
-    "    print('len df is:', len(df))\n",
+    "    print('Спарсено', len(vacancies), 'со страницы', page)\n",
     "\n",
     "    # Парсим список вакансий в DF и оставляем только нужные атрибуты\n",
     "    vacancy_attribs = ['id', 'name', 'url', 'alternate_url', 'employer', 'area',\n",
@@ -668,7 +661,7 @@
     "    # Убираем дубли\n",
     "    vacancies_df = vacancies_df[~vacancies_df.id.duplicated()]\n",
     "    print('len vacancies_df after filters is:', len(vacancies_df))\n",
-    "    if len(vacancies_df) < (found if found < 100 else 100) and page < pages:\n",
+    "    if len(vacancies_df) < (found if found < num_vac else num_vac) and page < pages:\n",
     "        # Если количество вакансий после фильтров оказалось меньше 100,\n",
     "        # и при этом найдено более 100 вакансий, то запускаем процесс заново\n",
     "        sleep(10)  # ожидание чтобы не попасть на капчу\n",
@@ -922,8 +915,7 @@
    ],
    "source": [
     "# Проверяем получившийся результат по компаниям\n",
-    "employers_df = get_table('employers', db_name)\n",
-    "employers_df"
+    "get_table('employers', db_name)"
    ]
   },
   {
@@ -1353,27 +1345,6 @@
    "source": [
     "# Проверяем получившийся результат по вакансиям\n",
     "get_table('vacancies', db_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "d273c700-f7a3-4197-a6fc-286180552921",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "execute('vacuum', db_name)"
    ]
   },
   {
